2005-07-21  Per Bothner  <per@bothner.com>

	* ClassMemberLocation.java (defineAll): Inline one overload in other,
	since we we only need/use one variation.

2005-07-20  Per Bothner  <per@bothner.com>

	* StaticFieldLocation.java (isConstant): Remove - use inherited method.

2005-06-02  Per Bothner  <per@bothner.com>

	* FieldLocation.java (getDeclaration): Trivial improvement.

2005-05-27  Per Bothner  <per@bothner.com>

	* FieldLocation.java (get): Fix handling of INDIRECT_LOCATION.

2005-05-19  Per Bothner  <per@bothner.com>

	* ClassMethods.java (checkMethod): New method overloading.
	* SlotGet.java (compile): Use new method to avoid premature mangling.
	(getField): Instead, we have to mangle a field name here.

2005-05-17  Per Bothner  <per@bothner.com>

	* Invoke.java (inline): Fix logic error in okCount==0 case.
	(append): New private jeper method.
	(inline): Use append to format warnings.

2005-05-14  Per Bothner  <per@bothner.com>

	* StaticFieldLocation.java (get): Setting value field from result
	of super.get violates latter's invariant.

2005-04-20  Per Bothner  <per@bothner.com>

	* FieldLocation.java (setup): Call super.setup() to set rfield.

	* ClassMemberLocation.java (setup): Use initCause to set cause, if
	use:java.lang.Throwable.getCause PreProcess keyword is set (default).

2005-03-29  Per Bothner  <per@bothner.com>

	* FieldLocation.java (isIndirectLocation): Make public - for require.
	(getDeclaration): Get declaration via ModuleInfo.

2005-03-28  Per Bothner  <per@bothner.com>

	* SlotGet.java (field, staticField): Make fields final.
	* SlotGet.java (compile): Remove ineffective/obsolete test for
	indirection if Symbol - was never updated to use Location.
	(apply): Remove extra indirection if Location.
	* SlotSet.java (apply, compile): Likewise.

2005-03-24  Per Bothner  <per@bothner.com>

	* FieldLocation.java (getField, getFType): New methods.

	* FieldLocation.java (getDeclaration): Do setKindFlags if needed.
